--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "styled-components": "^6.3.11",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
