Working on set toaster and private route

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ dist-ssr
 *.local
 .env
 
+UpdateVehicle
+VehiclesDetails
+AddVehicles
+MyBookings
+MyVehicles
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
